--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -61,7 +61,7 @@
 }
 
 .cover-h1 {
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 2rem;
     font-weight: 600;
     line-height: 1;
@@ -81,7 +81,7 @@
 }
 
 .cover-h2 {
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans', sans-serif;
     color: #2d3034;
     font-size: 17px;
     font-weight: 500;
@@ -93,7 +93,7 @@
 }
 
 .cover-categor-h2 {
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans', sans-serif;
     color: #7c7d80;
     font-size: 17px;
     font-weight: 500;
@@ -105,7 +105,7 @@
 }
 
 .cover-p {
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 1;
@@ -216,25 +216,26 @@
 
 .card-flex-article {
 
+}
+
 .card-divider {
     display: flex;
     background: transparent;
+}
 
 
 .avatar {
     margin-right: 0.75rem;
 }
 
-}
-
 .avatar {
     position: relative;
-
-img {
-    border-radius: 50%;
 }
 
-&
+/*img {
+    border-radius: 50%;
+}*/
+
 .with-add-icon .fa {
     position: absolute;
     bottom: 0;
@@ -242,20 +243,24 @@ img {
     /*color: $alert-color;*/
 }
 
-}
-
 .card-actions {
+
+}
 
 .fa:not(:last-of-type) {
     margin-right: 1rem;
-}
-
 }
 
 .card-image {
     position: relative;
     width: 250px;
     height: 200px;
+}
+
+.card-image-2 {
+    position: relative;
+    width: 100px;
+    height: 100px;
 }
 
 .exmpl {
@@ -295,19 +300,16 @@ img {
 }
 
 .article-summary {
-    font-family: 'IBM Plex Sans';
-}
-
+    font-family: 'IBM Plex Sans', sans-serif;
 }
 
 .user-info {
     font-size: 0.75rem;
+}
 
 .user-name {
     font-weight: bold;
     margin-bottom: 0;
-}
-
 }
 
 .notability {
@@ -315,12 +317,10 @@ img {
     opacity: 0.5;
 }
 
-}
-
 .tekstoviy-bloc {
     font-size: 1.2rem;
     font-weight: 300;
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans', sans-serif;
     color: #202020;
     text-align: justify;
     padding: 0;
@@ -329,7 +329,7 @@ img {
 .zagolovok-tekstoviy-bloc {
     font-size: 1.8rem;
     font-weight: 500;
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans', sans-serif;
     color: #202020;
     text-align: justify;
     padding: 0;
@@ -337,7 +337,7 @@ img {
 
 .spisok {
     list-style-type: none;
-    font-family: 'IBM Plex Sans';
+    font-family: 'IBM Plex Sans', sans-serif;
     font-size: 1.2rem;
     font-weight: 300;
     text-align: justify;
