--- a/src/main/resources/templates/content/material-page.html
+++ b/src/main/resources/templates/content/material-page.html
@@ -1,7 +1,7 @@
-<div class="row-100-block" style="background: white">
+<div id="searchBar" class="row-100-block" style="background: white" hidden>
     <div class="col-20"></div>
     <div class="col-60" style="display: flex">
-        <div class="row-100-block" th:if="${roleAdmin} or ${roleMainModerator} or ${roleModerator}">
+        <div class="row-100-block">
             <div class="col-100-inline-flex">
                 <div class="flex-center" style="width: 100%">
                     <form th:method="GET" th:action="@{/material/search}" style="padding: 1vh; display: block; width: 100%">
@@ -10,15 +10,14 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="col-20"></div>
+</div>
+<div class="row-100-block" style="background: white">
+    <div class="col-20"></div>
+    <div class="col-60" style="display: flex">
         <div class="row-100" th:if="${rolePublisher}">
-            <div class="col-70-inline-flex">
-                <div class="flex-center" style="width: 100%">
-                    <form th:method="GET" th:action="@{/material/search}" style="padding: 1vh; display: block; width: 100%">
-                        <input type="search" id="search" name="search" placeholder="Введите свой запрос здесь" style="display: inline-block; padding: 0.5vh; width: 100%">
-                    </form>
-                </div>
-            </div>
-            <div class="col-30-inline-flex">
+            <div class="col-100-inline-flex">
                 <div class="flex-center" style="width: 100%; margin-top: 12px" th:if="${rolePublisher}">
                     <form th:method="GET" th:action="@{/material/post}" class="text-center">
                         <input type="submit" value="добавить пост" class="input-button">
@@ -30,7 +29,7 @@
     <div class="col-20"></div>
 </div>
 
-<div class="row-100-block" th:if="${roleMainModerator} or ${roleAdmin}" style="background: white">
+<div class="row-100-block" th:if="${roleMainModerator} or ${roleAdmin}" style="background: white; padding-top: 1vh">
     <div class="col-20"></div>
     <div class="col-60">
         <div class="col-20"></div>
@@ -43,7 +42,7 @@
     <div class="col-20"></div>
 </div>
 
-<div th:if="${posts.size() == 0}" class="row-100-block" style="padding: 30.8vh 0; background: white"></div>
+<div th:if="${posts.size() == 0}" class="row-100-block" style="padding: 35vh 0; background: white"></div>
 <div th:if="${posts.size() != 0}" class="row-100-block" style="background: white; padding: 5.5vh 0">
     <div class="col-20"></div>
     <div class="col-60">
