--- a/src/main/resources/templates/content/reg-page.html
+++ b/src/main/resources/templates/content/reg-page.html
@@ -1,12 +1,12 @@
-<div class="row-100">
+<div class="row-100" style="background: white">
     <div class="col-20"></div>
-    <div class="col-60-inline-flex" style="min-height: 700px">
+    <div class="col-60-inline-flex">
         <form th:method="POST" th:action="@{/auth/reg}" th:object="${user}" class="flex-center" style="width: 100%">
             <div class="row-100" style="display: inline-flex; padding: 1vh">
                 <h2 style="margin: auto">Форма регистрации</h2>
             </div>
-            <div class="col-50-inline-flex" style="width: 50%; min-height: 500px">
-                <div class="flex-center shadow border" style="padding: 2vh">
+            <div class="col-50-inline-flex">
+                <div class="flex-center" style="width: 100%; padding: 2vh">
                     <label for="email">e-mail:</label>
                     <input type="email" id="email" th:field="*{mail}" style="width: 100%">
                     <div th:if="${#fields.hasErrors('mail')}" style="border: solid 1px red; background: pink">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-50-inline-flex" style="width: 50%; min-height: 500px">
+            <div class="col-50-inline-flex" style="padding-top: 30vh">
                 <div class="flex-center">
                     <input type="checkbox" name="admin" id="admin" th:field="*{admin}" onclick="setAdmin()">
                     <label for="admin">Администратор</label><br>
