update: 11-02-2024 (dd-MM-yyyy) * added simple calendar

--- a/src/main/resources/templates/blocks/footer.html
+++ b/src/main/resources/templates/blocks/footer.html
@@ -1,4 +1,4 @@
-<footer class="marketing-site-footer">
+<footer class="marketing-site-footer" style="padding-bottom: 30vh">
     <div class="row medium-unstack">
         <div class="medium-3 columns">
             <img src="/img/logo-2.png" class="marketing-site-footer-name">
