--- a/src/main/resources/templates/content/profile-page.html
+++ b/src/main/resources/templates/content/profile-page.html
@@ -6,9 +6,10 @@
                 <p th:text="'Текущая роль ' + ${role.getDisplayName()}"></p>
             </div>
             <div class="row-100-block" th:if="${roleModerator}">
-                <div th:each="sportTag : ${sportTags}" style="display: inline-block">
+                <span>Редактирует разделы: </span>
+                <div th:each="sportTag, stat : ${sportTags}" style="display: block">
                     <!--<img th:src="'/download/' + ${sportTag.getImageId()}" width="32" height="32">-->
-                    <p th:text="${'Редактирует раздел: ' + sportTag.getName()}"></p>
+                    <p th:text="${stat.index + 1} + ') ' + ${sportTag.getName()}"></p>
                 </div>
             </div>
             <div class="row-100-block" th:if="${rolePublisher} and ${posts.size() != 0}">
