--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -15,7 +15,8 @@
         <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
 
         <!-- yandex map -->
-        <script src="https://api-maps.yandex.ru/2.1/?apikey=7c13cf7d-c937-4ca6-8021-145ac16bdcae&lang=ru_RU" type="text/javascript"></script>
+        <script src="https://api-maps.yandex.ru/2.1/?apikey=7c13cf7d-c937-4ca6-8021-145ac16bdcae&lang=ru_RU"
+                type="text/javascript"></script>
         <link href="/css/map.css" rel="stylesheet">
         <script src="/js/map.js" type="text/javascript"></script>
 
@@ -39,29 +40,32 @@
         <script src="/js/what-input.js" type="text/javascript"></script>
     </head>
 
-    <body>
-        <header th:insert="~{blocks/header}"></header>
-        <nav th:insert="~{blocks/navbar}"></nav>
+    <body style="background: #2c3840">
+        <div style="background: white">
+            <header th:insert="~{blocks/header}"></header>
+            <nav th:insert="~{blocks/navbar}"></nav>
 
-        <div th:insert="~{content/home-page}" th:if="${index} == 'home-page'"></div>
-        <div th:insert="~{content/material-page}" th:if="${index} == 'material-page'"></div>
-        <div th:insert="~{content/slider-page}" th:if="${index} == 'slider-page'"></div>
-        <div th:insert="~{content/event-page}" th:if="${index} == 'event-page'"></div>
-        <div th:insert="~{content/contact-page}" th:if="${index} == 'contact-page'"></div>
-        <div th:insert="~{content/admin-page}" th:if="${index} == 'admin-page'"></div>
-        <div th:insert="~{content/login-page}" th:if="${index} == 'login-page'"></div>
-        <div th:insert="~{content/reg-page}" th:if="${index} == 'reg-page'"></div>
-        <div th:insert="~{content/tag-page}" th:if="${index} == 'tag-page'"></div>
-        <div th:insert="~{content/add-post-page}" th:if="${index} == 'add-post-page'"></div>
-        <div th:insert="~{content/edit-post-page}" th:if="${index} == 'edit-post-page'"></div>
-        <div th:insert="~{content/post-page}" th:if="${index} == 'post-page'"></div>
-        <div th:insert="~{content/profile-page}" th:if="${index} == 'profile-page'"></div>
-        <div th:insert="~{content/bookmarks-page}" th:if="${index} == 'bookmarks-page'"></div>
-
-        <footer th:insert="~{blocks/footer}"></footer>
+            <div th:insert="~{content/home-page}" th:if="${index} == 'home-page'"></div>
+            <div th:insert="~{content/material-page}" th:if="${index} == 'material-page'"></div>
+            <div th:insert="~{content/slider-page}" th:if="${index} == 'slider-page'"></div>
+            <div th:insert="~{content/event-page}" th:if="${index} == 'event-page'"></div>
+            <div th:insert="~{content/contact-page}" th:if="${index} == 'contact-page'"></div>
+            <div th:insert="~{content/admin-page}" th:if="${index} == 'admin-page'"></div>
+            <div th:insert="~{content/login-page}" th:if="${index} == 'login-page'"></div>
+            <div th:insert="~{content/reg-page}" th:if="${index} == 'reg-page'"></div>
+            <div th:insert="~{content/tag-page}" th:if="${index} == 'tag-page'"></div>
+            <div th:insert="~{content/add-post-page}" th:if="${index} == 'add-post-page'"></div>
+            <div th:insert="~{content/edit-post-page}" th:if="${index} == 'edit-post-page'"></div>
+            <div th:insert="~{content/post-page}" th:if="${index} == 'post-page'"></div>
+            <div th:insert="~{content/profile-page}" th:if="${index} == 'profile-page'"></div>
+            <div th:insert="~{content/bookmarks-page}" th:if="${index} == 'bookmarks-page'"></div>
+        </div>
+        <div style="background: #0a0a0a">
+            <footer th:insert="~{blocks/footer}"></footer>
+        </div>
 
         <script>
-            $(document).ready(function() {
+            $(document).ready(function () {
                 $('#summernote').summernote({
                     height: 300
                 });
