--- a/src/main/resources/templates/content/bookmarks-page.html
+++ b/src/main/resources/templates/content/bookmarks-page.html
@@ -1,25 +1,25 @@
 <div class="row-100" th:if="${posts.size() != 0}" style="background: white">
-  <div class="col-20"></div>
-  <div class="col-60" style="padding: 1vh">
-    <div class="flex-container target" th:each="post,stat:${posts}" style="padding: 1vh; margin-bottom: 1vh">
-      <a th:href="@{/read/post/{id}(id=${post.getId()})}" style="color: black">
-        <div class="col-60">
-          <div class="row-100">
-            <h4 th:text="${post.getName()}">name</h4>
-          </div>
-          <div class="row-100 word-break">
-            <p th:text="${post.getAnnotation()}">annotation</p>
-          </div>
+    <div class="col-20"></div>
+    <div class="col-60" style="padding: 1vh">
+        <div class="flex-container" th:each="post,stat:${posts}" style="padding: 1vh; margin-bottom: 1vh">
+            <a th:href="@{/read/post/{id}(id=${post.getId()})}" style="color: black">
+                <div class="col-60">
+                    <div class="row-100">
+                        <h4 th:text="${post.getName()}">name</h4>
+                    </div>
+                    <div class="row-100 word-break">
+                        <p th:text="${post.getAnnotation()}">annotation</p>
+                    </div>
+                </div>
+                <div class="col-40">
+                    <img class="image" th:src="'/download/' + ${post.getImageId()}">
+                </div>
+            </a>
         </div>
-        <div class="col-40">
-          <img class="image" th:src="'/download/' + ${post.getImageId()}">
-        </div>
-      </a>
     </div>
-  </div>
-  <div class="col-20"></div>
+    <div class="col-20"></div>
 </div>
 
 <div th:if="${posts.size() == 0}" style="background: white; padding: 30.5vh 0">
-  <p style="text-align: center">У вас нету закладок. Добавьте что нибудь.</p>
+    <p style="text-align: center">У вас нету закладок. Добавьте что нибудь.</p>
 </div>
