--- a/src/main/resources/templates/content/slider-page.html
+++ b/src/main/resources/templates/content/slider-page.html
@@ -12,7 +12,7 @@
     <div class="col-20"></div>
 </div>
 
-<div class="row-100-block" style="background: white; padding: 5.5vh 0">
+<div class="row-100-block" style="background: white">
     <div class="col-20"></div>
     <div class="col-60" style="padding: 20vh">
         <div class="row-100-block" style="text-align: center">
